<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.0">
  <DUT Name="stCounter" Id="{f5a05de8-f696-41bd-9670-26f03077a447}">
    <Declaration><![CDATA[{attribute wpf [Container(Layout.Stack)]}
TYPE stCounter :
STRUCT
	{attribute addProperty Name "Allow counting"}
	{attribute addProperty ToolTip "Allows the counter to increment value."}
	_doCount : BOOL;
	{attribute addProperty Name "Counter"}
	{attribute addProperty ToolTip "Counter value."}
	_counterValue : INT;	
	{attribute addProperty Name "Reset Counter"}
	{attribute addProperty ToolTip "Resets counter to 0"}
	_resetCounterValue : BOOL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>