<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.0">
  <DUT Name="enumMonths" Id="{071463de-3159-46b7-b965-029e0cefbe6b}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE enumMonths :
(
	January := 1,
	February := 2,
	March := 3,
	April := 4,
	May := 5,
	June := 6,
	July := 7,
	August := 8,
	September := 9,
	October := 10,
	November := 11,
	December := 12
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>