<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.0">
  <POU Name="MAIN" Id="{9a38c83e-95ec-4606-9cc0-a8c01deedd3e}" SpecialFunc="None">
    <Declaration><![CDATA[{attribute wpf [Container(Layout.Tabs)]}
PROGRAM MAIN
VAR
	_counter : stCounter;
	_stations : fbStations;
	_months : enumMonths;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[IF(_counter._doCount) THEN
	_counter._counterValue :=  _counter._counterValue + 1;
END_IF

IF(_counter._resetCounterValue) THEN
	_counter._counterValue := 0;
	_counter._resetCounterValue := FALSE;
END_IF

_stations();]]></ST>
    </Implementation>
    <LineIds Name="MAIN">
      <LineId Id="2" Count="0" />
      <LineId Id="7" Count="1" />
      <LineId Id="10" Count="0" />
      <LineId Id="9" Count="0" />
      <LineId Id="11" Count="0" />
      <LineId Id="13" Count="0" />
      <LineId Id="12" Count="0" />
      <LineId Id="20" Count="0" />
      <LineId Id="19" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>